--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           <div class="row">
             <div class="col-md-4 servis mt-5">
               <h3 class="text-center mb-3"><i class="fas fa-bullhorn"></i></h3>
-              <h2 class="text-center">Safty Guide</h2>
+              <h2 class="text-center">Safety Guide</h2>
               <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore commodi earum, quis voluptate exercitationem ut minima itaque iusto ipsum corrupti!</p>
             </div>
             <div class="col-md-4 servis mt-5">
