mengubah text typo

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="container">
             <div class="kata">
               <p>OUR PACKAGES</p>
-              <h3>Search your Holliday</h3>
+              <h3>Search your Holiday</h3>
               <button type="button" class="btn btn1 mt-3">Explore ></button>
             </div>
           </div>
